First draft of image uploading
